tests/tests/snapshots/test__csharp__csharp-export-raw.snap
---
source: tests/tests/csharp.rs
expression: output
---
// This file has been generated by Specta. Do not edit this file manually.
// custom header
#nullable enable

namespace Example.Bindings;

public abstract record Event<T>
{
    public sealed record Started : Event<T>
    {
    }
    public sealed record Progress : Event<T>
    {
        [global::System.Text.Json.Serialization.JsonPropertyName("0")]
        public required byte Item1 { get; init; }
        [global::System.Text.Json.Serialization.JsonPropertyName("1")]
        public required T Item2 { get; init; }
    }
    public sealed record Failed : Event<T>
    {
        [global::System.Text.Json.Serialization.JsonPropertyName("message")]
        public required string Message { get; init; }
        [global::System.Text.Json.Serialization.JsonPropertyName("retryable")]
        public required bool Retryable { get; init; }
    }
}

public sealed record KeywordFields
{
    [global::System.Text.Json.Serialization.JsonPropertyName("class")]
    public required bool Class { get; init; }
    [global::System.Text.Json.Serialization.JsonPropertyName("kebab")]
    public required int Kebab { get; init; }
}

///  A documented generic response.
public sealed record Response<T>
{
    ///  The response payload.
    [global::System.Text.Json.Serialization.JsonPropertyName("value")]
    public required T Value { get; init; }
    [global::System.Text.Json.Serialization.JsonPropertyName("request_id")]
    public required string RequestId { get; init; }
    [global::System.Text.Json.Serialization.JsonPropertyName("warning")]
    public required string? Warning { get; init; }
    [global::System.Text.Json.Serialization.JsonPropertyName("counts")]
    public required global::System.Collections.Generic.IReadOnlyDictionary<string, ulong> Counts { get; init; }
}

public enum Status
{
    InProgress,
    Complete,
}

internal static class BindingMarker { }
