tests/tests/snapshots/test__csharp__csharp-export-serde-phases.snap
---
source: tests/tests/csharp.rs
expression: output
---
// This file has been generated by Specta. Do not edit this file manually.
// custom header
#nullable enable

namespace Example.Bindings;

public abstract record Event<T>
{
    public sealed record Started : Event<T>
    {
        public enum Item1Value
        {
            Started,
        }
        [global::System.Text.Json.Serialization.JsonPropertyName("0")]
        public required Item1Value Item1 { get; init; }
    }
    public sealed record Progress : Event<T>
    {
        [global::System.Text.Json.Serialization.JsonPropertyName("Progress")]
        public required (byte, T) Progress2 { get; init; }
    }
    public sealed record Failed : Event<T>
    {
        public sealed record Failed2Value
        {
            [global::System.Text.Json.Serialization.JsonPropertyName("message")]
            public required string Message { get; init; }
            [global::System.Text.Json.Serialization.JsonPropertyName("retryable")]
            public required bool Retryable { get; init; }
        }
        [global::System.Text.Json.Serialization.JsonPropertyName("Failed")]
        public required Failed2Value Failed2 { get; init; }
    }
}

public sealed record KeywordFields
{
    [global::System.Text.Json.Serialization.JsonPropertyName("class")]
    public required bool Class { get; init; }
    [global::System.Text.Json.Serialization.JsonPropertyName("kebab-case")]
    public required int KebabCase { get; init; }
}

///  A documented generic response.
public abstract record Response<T>
{
    public sealed record Serialize : Response<T>
    {
        [global::System.Text.Json.Serialization.JsonPropertyName("0")]
        public required ResponseSerialize<T> Item1 { get; init; }
    }
    public sealed record Deserialize : Response<T>
    {
        [global::System.Text.Json.Serialization.JsonPropertyName("0")]
        public required ResponseDeserialize<T> Item1 { get; init; }
    }
}

///  A documented generic response.
public sealed record ResponseDeserialize<T>
{
    ///  The response payload.
    [global::System.Text.Json.Serialization.JsonPropertyName("value")]
    public required T Value { get; init; }
    [global::System.Text.Json.Serialization.JsonPropertyName("request-id")]
    public required string RequestId { get; init; }
    [global::System.Text.Json.Serialization.JsonPropertyName("warning")]
    public string? Warning { get; init; }
    [global::System.Text.Json.Serialization.JsonPropertyName("counts")]
    public required global::System.Collections.Generic.IReadOnlyDictionary<string, ulong> Counts { get; init; }
}

///  A documented generic response.
public sealed record ResponseSerialize<T>
{
    ///  The response payload.
    [global::System.Text.Json.Serialization.JsonPropertyName("value")]
    public required T Value { get; init; }
    [global::System.Text.Json.Serialization.JsonPropertyName("request-id")]
    public required string RequestId { get; init; }
    [global::System.Text.Json.Serialization.JsonPropertyName("warning")]
    public required string? Warning { get; init; }
    [global::System.Text.Json.Serialization.JsonPropertyName("counts")]
    public required global::System.Collections.Generic.IReadOnlyDictionary<string, ulong> Counts { get; init; }
}

public abstract record Status
{
    public sealed record InProgress : Status
    {
        public enum Item1Value
        {
            InProgress,
        }
        [global::System.Text.Json.Serialization.JsonPropertyName("0")]
        public required Item1Value Item1 { get; init; }
    }
    public sealed record Complete : Status
    {
        public enum Item1Value
        {
            Complete,
        }
        [global::System.Text.Json.Serialization.JsonPropertyName("0")]
        public required Item1Value Item1 { get; init; }
    }
}

internal static class BindingMarker { }
