tests/tests/snapshots/test__csharp__csharp-export-serde.snap
---
source: tests/tests/csharp.rs
expression: output
---
// This file has been generated by Specta. Do not edit this file manually.
// custom header
#nullable enable

namespace Example.Bindings;

public abstract record Event<T>
{
    public sealed record Started : Event<T>
    {
        public enum Item1Value
        {
            Started,
        }
        [global::System.Text.Json.Serialization.JsonPropertyName("0")]
        public required Item1Value Item1 { get; init; }
    }
    public sealed record Progress : Event<T>
    {
        [global::System.Text.Json.Serialization.JsonPropertyName("Progress")]
        public required (byte, T) Progress2 { get; init; }
    }
    public sealed record Failed : Event<T>
    {
        public sealed record Failed2Value
        {
            [global::System.Text.Json.Serialization.JsonPropertyName("message")]
            public required string Message { get; init; }
            [global::System.Text.Json.Serialization.JsonPropertyName("retryable")]
            public required bool Retryable { get; init; }
        }
        [global::System.Text.Json.Serialization.JsonPropertyName("Failed")]
        public required Failed2Value Failed2 { get; init; }
    }
}

public sealed record KeywordFields
{
    [global::System.Text.Json.Serialization.JsonPropertyName("class")]
    public required bool Class { get; init; }
    [global::System.Text.Json.Serialization.JsonPropertyName("kebab-case")]
    public required int KebabCase { get; init; }
}

///  A documented generic response.
public sealed record Response<T>
{
    ///  The response payload.
    [global::System.Text.Json.Serialization.JsonPropertyName("value")]
    public required T Value { get; init; }
    [global::System.Text.Json.Serialization.JsonPropertyName("request-id")]
    public required string RequestId { get; init; }
    [global::System.Text.Json.Serialization.JsonPropertyName("warning")]
    public string? Warning { get; init; }
    [global::System.Text.Json.Serialization.JsonPropertyName("counts")]
    public required global::System.Collections.Generic.IReadOnlyDictionary<string, ulong> Counts { get; init; }
}

[global::System.Text.Json.Serialization.JsonConverter(typeof(__SpectaStatusJsonConverter))]
public enum Status
{
    InProgress,
    Complete,
}

public sealed class __SpectaStatusJsonConverter : global::System.Text.Json.Serialization.JsonConverter<Status>
{
    public override Status Read(ref global::System.Text.Json.Utf8JsonReader reader, global::System.Type typeToConvert, global::System.Text.Json.JsonSerializerOptions options)
    {
        if (reader.TokenType != global::System.Text.Json.JsonTokenType.String)
        {
            throw new global::System.Text.Json.JsonException();
        }
        return reader.GetString() switch
        {
            "in_progress" => Status.InProgress,
            "complete" => Status.Complete,
            _ => throw new global::System.Text.Json.JsonException(),
        };
    }
    public override void Write(global::System.Text.Json.Utf8JsonWriter writer, Status value, global::System.Text.Json.JsonSerializerOptions options)
    {
        writer.WriteStringValue(value switch
        {
            Status.InProgress => "in_progress",
            Status.Complete => "complete",
            _ => throw new global::System.Text.Json.JsonException(),
        });
    }
}

internal static class BindingMarker { }
