tests/tests/snapshots/test__csharp__csharp-files.snap
---
source: tests/tests/csharp.rs
expression: files
---
Test/
  Csharp/
    Event.cs (832 bytes)
    ────────────────────────────────────────
    // This file has been generated by Specta. Do not edit this file manually.
    #nullable enable
    
    namespace Example.Test.Csharp;
    
    public abstract record Event<T>
    {
        public sealed record Started : Event<T>
        {
        }
        public sealed record Progress : Event<T>
        {
            [global::System.Text.Json.Serialization.JsonPropertyName("0")]
            public required byte Item1 { get; init; }
            [global::System.Text.Json.Serialization.JsonPropertyName("1")]
            public required T Item2 { get; init; }
        }
        public sealed record Failed : Event<T>
        {
            [global::System.Text.Json.Serialization.JsonPropertyName("message")]
            public required string Message { get; init; }
            [global::System.Text.Json.Serialization.JsonPropertyName("retryable")]
            public required bool Retryable { get; init; }
        }
    }
    ════════════════════════════════════════

    KeywordFields.cs (397 bytes)
    ────────────────────────────────────────
    // This file has been generated by Specta. Do not edit this file manually.
    #nullable enable
    
    namespace Example.Test.Csharp;
    
    public sealed record KeywordFields
    {
        [global::System.Text.Json.Serialization.JsonPropertyName("class")]
        public required bool Class { get; init; }
        [global::System.Text.Json.Serialization.JsonPropertyName("kebab")]
        public required int Kebab { get; init; }
    }
    ════════════════════════════════════════

    Response.cs (779 bytes)
    ────────────────────────────────────────
    // This file has been generated by Specta. Do not edit this file manually.
    #nullable enable
    
    namespace Example.Test.Csharp;
    
    ///  A documented generic response.
    public sealed record Response<T>
    {
        ///  The response payload.
        [global::System.Text.Json.Serialization.JsonPropertyName("value")]
        public required T Value { get; init; }
        [global::System.Text.Json.Serialization.JsonPropertyName("request_id")]
        public required string RequestId { get; init; }
        [global::System.Text.Json.Serialization.JsonPropertyName("warning")]
        public required string? Warning { get; init; }
        [global::System.Text.Json.Serialization.JsonPropertyName("counts")]
        public required global::System.Collections.Generic.IReadOnlyDictionary<string, ulong> Counts { get; init; }
    }
    ════════════════════════════════════════

    Status.cs (178 bytes)
    ────────────────────────────────────────
    // This file has been generated by Specta. Do not edit this file manually.
    #nullable enable
    
    namespace Example.Test.Csharp;
    
    public enum Status
    {
        InProgress,
        Complete,
    }
    ════════════════════════════════════════

Specta.g.cs (153 bytes)
────────────────────────────────────────
// This file has been generated by Specta. Do not edit this file manually.
#nullable enable

namespace Example;

internal static class BindingMarker { }
════════════════════════════════════════

keep.cs (67 bytes)
────────────────────────────────────────
// user owned
// generated by Specta should not establish ownership
════════════════════════════════════════
