tests/tests/snapshots/test__csharp__csharp-namespaces.snap
---
source: tests/tests/csharp.rs
expression: output
---
// This file has been generated by Specta. Do not edit this file manually.
#nullable enable

namespace Company.Api.Test.Csharp
{
  internal abstract record Event<T>
  {
    public sealed record Started : Event<T>
    {
      internal enum Item1Value
      {
        Started,
      }
      [global::System.Text.Json.Serialization.JsonPropertyName("0")]
      public required Item1Value Item1 { get; init; }
    }
    public sealed record Progress : Event<T>
    {
      [global::System.Text.Json.Serialization.JsonPropertyName("Progress")]
      public required (byte, T) Progress2 { get; init; }
    }
    public sealed record Failed : Event<T>
    {
      public sealed record Failed2Value
      {
        [global::System.Text.Json.Serialization.JsonPropertyName("message")]
        public required string Message { get; init; }
        [global::System.Text.Json.Serialization.JsonPropertyName("retryable")]
        public required bool Retryable { get; init; }
      }
      [global::System.Text.Json.Serialization.JsonPropertyName("Failed")]
      public required Failed2Value Failed2 { get; init; }
    }
  }

  internal sealed record KeywordFields
  {
    [global::System.Text.Json.Serialization.JsonPropertyName("class")]
    public required bool Class { get; init; }
    [global::System.Text.Json.Serialization.JsonPropertyName("kebab-case")]
    public required int KebabCase { get; init; }
  }

  ///  A documented generic response.
  internal sealed record Response<T>
  {
    ///  The response payload.
    [global::System.Text.Json.Serialization.JsonPropertyName("value")]
    public required T Value { get; init; }
    [global::System.Text.Json.Serialization.JsonPropertyName("request-id")]
    public required string RequestId { get; init; }
    [global::System.Text.Json.Serialization.JsonPropertyName("warning")]
    public string? Warning { get; init; }
    [global::System.Text.Json.Serialization.JsonPropertyName("counts")]
    public required global::System.Collections.Generic.IReadOnlyDictionary<string, ulong> Counts { get; init; }
  }

  internal abstract record Status
  {
    public sealed record InProgress : Status
    {
      internal enum Item1Value
      {
        InProgress,
      }
      [global::System.Text.Json.Serialization.JsonPropertyName("0")]
      public required Item1Value Item1 { get; init; }
    }
    public sealed record Complete : Status
    {
      internal enum Item1Value
      {
        Complete,
      }
      [global::System.Text.Json.Serialization.JsonPropertyName("0")]
      public required Item1Value Item1 { get; init; }
    }
  }
}

namespace Company.Api
{
  internal static class BindingMarker { }
}
